feat: Implement stricter logic for potential score

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FaceRate</title>
+    <title>FaceMaxx</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -29,9 +29,8 @@
                 </div>
             </div>
             <div class="panel right-panel flex items-center justify-center">
-                <div class="corner-logo" style="right: 2rem;"><span class="text-gray-500">FaceRate</span></div>
                 <div>
-                    <h1 class="text-5xl md:text-6xl font-semibold text-gray-800 mb-2">FaceRate is live.</h1>
+                    <h1 class="text-5xl md:text-6xl font-semibold text-gray-800 mb-2">FaceMaxx is live.</h1>
                     <p class="text-lg max-w-md text-gray-500 mb-8">Get your facial analysis, see what your best-looking
                         self could look like and get your tailored transformation plan.</p>
                     <button id="go-to-upload" class="cta-button font-medium py-3 px-6 rounded-full text-base">Begin
@@ -53,7 +52,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M10 19l-7-7m0 0l7-7m-7 7h18"></path>
                     </svg></button></div>
-            <div class="absolute top-0 right-0 p-8"><span class="text-gray-500 text-xl font-semibold">FaceRate</span>
+            <div class="absolute top-0 right-0 p-8"><span class="text-gray-500 text-xl font-semibold">FaceMaxx</span>
             </div>
             <div class="upload-container text-center">
                 <h2 class="text-3xl font-semibold text-gray-800 mb-2">Upload Your Photo</h2>
